; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/devices/extr_doc2001plus.c_DoC_GetDataOffset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/devices/extr_doc2001plus.c_DoC_GetDataOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { %struct.DiskOnChip* }
%struct.DiskOnChip = type { i64 }

@NAND_CMD_READ0 = common dso_local global i32 0, align 4
@NAND_CMD_READ1 = common dso_local global i32 0, align 4
@NAND_CMD_READOOB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_info*, i32*)* @DoC_GetDataOffset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DoC_GetDataOffset(%struct.mtd_info* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mtd_info*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.DiskOnChip*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mtd_info* %0, %struct.mtd_info** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.mtd_info*, %struct.mtd_info** %4, align 8
  %10 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %9, i32 0, i32 0
  %11 = load %struct.DiskOnChip*, %struct.DiskOnChip** %10, align 8
  store %struct.DiskOnChip* %11, %struct.DiskOnChip** %6, align 8
  %12 = load %struct.DiskOnChip*, %struct.DiskOnChip** %6, align 8
  %13 = getelementptr inbounds %struct.DiskOnChip, %struct.DiskOnChip* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %47

16:                                               ; preds = %2
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %17, align 4
  %19 = and i32 %18, 1023
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ult i32 %20, 512
  br i1 %21, label %22, label %26

22:                                               ; preds = %16
  %23 = load i32, i32* @NAND_CMD_READ0, align 4
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %7, align 4
  %25 = and i32 %24, 511
  store i32 %25, i32* %7, align 4
  br label %39

26:                                               ; preds = %16
  %27 = load i32, i32* %7, align 4
  %28 = icmp ult i32 %27, 1014
  br i1 %28, label %29, label %34

29:                                               ; preds = %26
  %30 = load i32, i32* @NAND_CMD_READ1, align 4
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %7, align 4
  %32 = and i32 %31, 511
  %33 = add i32 %32, 10
  store i32 %33, i32* %7, align 4
  br label %38

34:                                               ; preds = %26
  %35 = load i32, i32* @NAND_CMD_READOOB, align 4
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %7, align 4
  %37 = sub i32 %36, 1014
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %34, %29
  br label %39

39:                                               ; preds = %38, %22
  %40 = load i32*, i32** %5, align 8
  %41 = load i32, i32* %40, align 4
  %42 = and i32 %41, -1024
  %43 = load i32, i32* %7, align 4
  %44 = or i32 %42, %43
  %45 = load i32*, i32** %5, align 8
  store i32 %44, i32* %45, align 4
  %46 = load i32, i32* %8, align 4
  store i32 %46, i32* %3, align 4
  br label %56

47:                                               ; preds = %2
  %48 = load i32*, i32** %5, align 8
  %49 = load i32, i32* %48, align 4
  %50 = and i32 %49, 256
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %54

52:                                               ; preds = %47
  %53 = load i32, i32* @NAND_CMD_READ1, align 4
  store i32 %53, i32* %3, align 4
  br label %56

54:                                               ; preds = %47
  %55 = load i32, i32* @NAND_CMD_READ0, align 4
  store i32 %55, i32* %3, align 4
  br label %56

56:                                               ; preds = %54, %52, %39
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
